Bug 272775 - Routing widget should remember last routing profile
Summary: Routing widget should remember last routing profile
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR minor
Target Milestone: 1.1.0
Assignee: marble-bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-05-08 14:36 UTC by Bernhard Beschow
Modified: 2011-05-28 00:08 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.2.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bernhard Beschow 2011-05-08 14:36:19 UTC
Version:           unspecified (using KDE 4.6.2) 
OS:                Linux

After Marble has been started, the routing widget always switches to the "Car (fastest)" profile. Users who don't have a motorized vehicle have to switch to "pedestrian" or "bicycle" before they get relevant results, which may be quite annoying.

Reproducible: Always

Steps to Reproduce:
1) choose "pedestrian" profile in the routing widget.
2) restart Marble

Actual Results:  
"Car (fastest)" profile is selected in the routing widget

Expected Results:  
"pedestrian" (in general: the last selected profile) should be selected 

OS: Linux (i686) release 2.6.38-ARCH
Compiler: gcc
Comment 1 Dennis Nienhüser 2011-05-28 00:08:51 UTC
Git commit 45f4e38657358530a3b5ea5aca6ae69d2e85c0a6 by Dennis Nienhüser.
Committed on 27/05/2011 at 23:55.
Pushed by nienhueser into branch 'master'.

Remember the active routing profile acress sessions.

BUG: 272775
FIXED-IN: 1.2.0

M  +17   -7    src/QtMainWindow.cpp     
M  +3    -2    src/lib/routing/RouteRequest.cpp     
M  +3    -0    src/lib/routing/RouteRequest.h     
M  +5    -0    src/lib/routing/RoutingProfile.cpp     
M  +2    -0    src/lib/routing/RoutingProfile.h     
M  +10   -0    src/lib/routing/RoutingWidget.cpp     
M  +3    -0    src/lib/routing/RoutingWidget.h     
M  +3    -0    src/marble.kcfg     
M  +17   -6    src/marble_part.cpp     

http://commits.kde.org/marble/45f4e38657358530a3b5ea5aca6ae69d2e85c0a6