Remember the active routing profile acress sessions.

BUG: 272775
FIXED-IN: 1.2.0